--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -99,7 +99,6 @@
             <!-- Navigation Menu -->
             <div class="left-half">
                 <nav id="navn1">
-                    <a href="#home"><img src="img/home.png" /><span class="nav-text">Home</span></a>
                     <a href="#experience"><img src="img/briefcase.png" /><span class="nav-text">Experience</span></a>
                     <a href="#projects"><img src="img/project.png" /><span class="nav-text">Projects</span></a>
                     <a href="#skills"><img src="img/tools.png" /><span class="nav-text">Skills</span></a>
@@ -142,12 +141,12 @@
             <div class="right-half">
                 <div class="right-side-content">
                     <!-- About Me Section -->
-                    <div class="contentstyle">
+                    <div class="summary">
                         <p>
-                            As a Computer Science student at the University of Toronto, I am passionate about coding and
-                            problem-solving, with skills in software development and web design. I seek opportunities to
-                            contribute to innovative projects within a dynamic team, applying my technical foundation to
-                            make a meaningful impact and grow professionally.
+                            As a Computer Science student at the <b>University of Toronto </b>, I am passionate about coding and
+                            <b>problem-solving</b>, with skills in <b>software development</b> and <b>web design</b>. I seek opportunities to
+                            contribute to <b>innovative projects</b> within a dynamic team, applying my technical foundation to
+                            make a <b>meaningful impact</b> and grow professionally.
                         </p>
                     </div>
 
@@ -192,31 +191,10 @@
                         </div>
                         <ul>
                             <li>
-                                Efficient Algorithm Implementation: Developed a Huffman
-                                Lossless Compression algorithm in Python, emphasizing the
-                                efficient use of data structures and advanced programming
-                                techniques for optimal compression results.
-                            </li>
-                            <li>
-                                Effective Data Handling: Implemented the algorithm using
-                                Python’s extensive built-in functions and libraries to achieve
-                                high levels of data compression efficiency.
-                            </li>
-                            <li>
-                                File Management and Data Integrity: Managed comprehensive file
-                                input/output operations and maintained data encoding and
-                                decoding accuracy, ensuring data integrity throughout the
-                                compression process.
-                            </li>
-                            <li>
-                                Reliability Through Error Handling: Incorporated robust error
-                                handling measures to enhance the tool’s resilience and
-                                reliability.
-                            </li>
-                            <li>
-                                Rigorous Testing and Validation: Executed detailed testing
-                                protocols to ensure the tool’s effectiveness in accurately
-                                decompressing files.
+                                Worked on a reliable and efficient Huffman Lossless Compression algorithm in Python,
+                                focusing on optimal data compression through advanced programming techniques, robust
+                                error handling, and thorough testing to ensure data integrity and accurate
+                                decompression.
                             </li>
                         </ul>
                     </div>
@@ -224,22 +202,9 @@
                         <div class="header">Phone Company Management System | Python</div>
                         <ul>
                             <li>
-                                Strategic Data Management: Engineered a Python-based
-                                management system designed to optimize operational workflows
-                                within a telecommunications company, focusing on the effective
-                                organization and tracking of customer contracts and phone
-                                lines.
-                            </li>
-                            <li>
-                                Dynamic Billing and Event Processing: Designed and implemented
-                                dynamic features for real-time processing of call events and
-                                management of billing cycles, significantly enhancing billing
-                                precision aligned with customer contract terms.
-                            </li>
-                            <li>
-                                Innovative User Interface Design: Developed a comprehensive
-                                Graphical User Interface (GUI) equipped with advanced filters
-                                for the in-depth visual analysis of call data, facilitating
+                                Worked on a Python-based management system for a telecommunications company, optimizing
+                                workflow efficiency, enhancing billing accuracy with real-time event processing, and
+                                designing a GUI with advanced filters for comprehensive call data analysis, supporting
                                 better decision-making and service improvements.
                             </li>
                         </ul>
@@ -250,28 +215,10 @@
                         </div>
                         <ul>
                             <li>
-                                Efficient Analysis and Prediction: Crafted a Java-based House
-                                Price Calculator Program that adeptly analyzes and forecasts
-                                house prices utilizing extensive datasets, streamlining the
-                                prediction process.
-                            </li>
-                            <li>
-                                Seamless Data Handling: Implemented sophisticated file reading
-                                and data extraction techniques for smooth access to historical
-                                house price data, ensuring the precision of analyses and
-                                forecasts.
-                            </li>
-                            <li>
-                                Insightful Trend Analysis: Devised algorithms for calculating
-                                house prices by year and city, offering valuable insights into
-                                regional price trends and helping users understand market
-                                dynamics.
-                            </li>
-                            <li>
-                                Robust Program Integrity: Exhibited exemplary error handling
-                                and data validation capabilities, guaranteeing the reliability
-                                and accuracy of program outputs, thus enhancing user trust and
-                                program utility
+                                Developed a Java-based House Price Calculator Program that accurately analyzes and
+                                predicts house prices using extensive datasets, implementing sophisticated data handling
+                                and error-checking techniques to ensure reliable outputs and providing insights into
+                                regional trends to aid market understanding.
                             </li>
                         </ul>
                     </div>
