added load in animations

--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -124,11 +124,13 @@
                 >Projects</span
               ></a
             >
+            <!--
             <a href="#skills"
               ><img src="img/tools.png" /><span class="nav-text"
                 >Skills</span
-              ></a
-            >
+              ></a>
+          -->
+            
             <a href="brad_ramnarinesingh_resume.pdf" target="_blank"
               ><img src="img/resume.png" /><span class="nav-text"
                 >Resume</span
@@ -167,7 +169,7 @@
               <a href="#home">HOME</a>
               <a href="#experience">EXPERIENCE</a>
               <a href="#projects">PROJECTS</a>
-              <a href="#skills">SKILLS</a>
+              <!--<a href="#skills">SKILLS</a> -->
               <a
                 style="font-weight: 900"
                 href="brad_ramnarinesingh_resume.pdf"
@@ -274,7 +276,7 @@
               </ul>
             </div>
 
-            <!-- Skills Section -->
+            <!-- Skills Section 
             <div class="sectiontitle">
               <div class="heading" id="skills">TECHNICAL SKILLS</div>
             </div>
@@ -300,7 +302,7 @@
               </div>
             </div>
           </div>
-
+          -->
           <!-- Footer Section -->
           <footer></footer>
           <script>
