--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -107,6 +107,7 @@
               midtoneColor: 0x70737,
               lowlightColor: 0x214,
               baseColor: 0x7,
+              blurFactor: 0.90
             });
           });
         </script>
