updated resume and enhanced visuals

--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -187,43 +187,76 @@
           </div>
           <div class="contentstyle">
             <div class="header">
-              Data Analysis and House Price Prediction | Java
+              Travel AI App Development | Gemini LLM, Next.js, Neon PostgreSQL, APIs
             </div>
             <ul>
               <li>
-                Developed a Java-based House Price Calculator Program that
-                accurately analyzes and predicts house prices using extensive
-                datasets, implementing sophisticated data handling and
-                error-checking techniques to ensure reliable outputs and
-                providing insights into regional trends to aid market
-                understanding.
+                Interface: Developed an interactive, mobile-friendly web interface with Next.js for seamless user
+                experience across
+                devices.
+              </li>
+
+              <li> AI: Built a travel assistant app using Gemini LLM to generate personalized travel plans based on user
+                preferences and
+                budgets.
+              </li>
+
+              <li> Backend: Integrated Neon PostgreSQL for efficient data management and a robust backend to handle
+                real-time queries
+                and user inputs
+              </li>
+
+              <li>Features: Incorporated APIs for location-based services and traffic updates to enhance trip planning
+                accuracy and
+                convenience.
               </li>
             </ul>
           </div>
           <div class="contentstyle">
             <div class="header">
-              Huffman Lossless Compression Program | Python
+              ML House Price Prediction | Python, Scikit-Learn, Gradient Boosting, Pandas, Matplotlib
             </div>
             <ul>
               <li>
-                Worked on a reliable and efficient Huffman Lossless
-                Compression algorithm in Python, focusing on optimal data
-                compression through advanced programming techniques, robust
-                error handling, and thorough testing to ensure data integrity
-                and accurate decompression.
+                Model: Built a predictive model using Python and Scikit-Learn Gradient Boosting Regressor, achieving a
+                Mean Absolute Error of $33,429.72 for house price forecasting.
+              </li>
+
+              <li>
+                Processing: Employed Pandas for data cleaning and feature engineering, including price change
+                calculations and normalization with StandardScaler, enhancing model performance by capturing market
+                trends.
+              </li>
+              <li>
+                Algorithm: Developed a conservative growth algorithm incorporating dynamic decay factors and sanity
+                checks to ensure reliable and realistic long-term price predictions
+              </li>
+              <li> Backend: Integrated Neon PostgreSQL for efficient data management and a robust backend to handle
+                real-time queries
+                and user inputs
+              </li>
+              <li>
+                Visualization: Utilized Matplotlib to create comprehensive graphs showcasing historical data and future
+                price projections, facilitating better interpretation and presentation of results.
               </li>
             </ul>
           </div>
           <div class="contentstyle">
-            <div class="header">Phone Company Management System | Python</div>
+            <div class="header">Portfolio Website | HTML/CSS, JavaScript</div>
             <ul>
               <li>
-                Worked on a Python-based management system for a
-                telecommunications company, optimizing workflow efficiency,
-                enhancing billing accuracy with real-time event processing,
-                and designing a GUI with advanced filters for comprehensive
-                call data analysis, supporting better decision-making and
-                service improvements.
+                Frontend Development: Designed and built a personal portfolio website using HTML, CSS, and JavaScript to
+                effectively showcase projects and skills.
+              </li>
+              <li>
+                Responsive Design: Implemented responsive web design principles to ensure consistent performance and
+                appearance
+                across various devices and browsers.
+              </li>
+              <li>
+                Interactive Features: Added interactive elements such as animations and hover effects to enhance user
+                engagement
+                and website appeal.
               </li>
             </ul>
           </div>
