--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -77,12 +77,12 @@
             mouseControls: true,
             touchControls: true,
             gyroControls: false,
-            minHeight: 1000.0,
-            minWidth: 1000.0,
-            highlightColor: 0x112541,
-            midtoneColor: 0x70737,
-            lowlightColor: 0x214,
-            baseColor: 0x7,
+            minHeight: 200.00,
+            minWidth: 200.00,
+            highlightColor: 0x75ff,
+            midtoneColor: 0x84bc8,
+            lowlightColor: 0x52ff,
+            baseColor: 0x1fff,
             blurFactor: 0.90
           });
         });
