fixed background colour

--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -77,12 +77,12 @@
             mouseControls: true,
             touchControls: true,
             gyroControls: false,
-            minHeight: 200.00,
-            minWidth: 200.00,
-            highlightColor: 0x75ff,
-            midtoneColor: 0x84bc8,
-            lowlightColor: 0x52ff,
-            baseColor: 0x1fff,
+            minHeight: 1000.0,
+            minWidth: 1000.0,
+            highlightColor: 0x161616,
+            midtoneColor: 0x13377b,
+            lowlightColor: 0x222f4c,
+            baseColor: 0x7,
             blurFactor: 0.90
           });
         });
