overall design improvment

--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -235,22 +235,12 @@
         </div>
         <div class="contentstyle">
           <div class="header">Web Developer & Designer</div>
-          <ul>
-            <li>
-              <b>Designed and developed</b> visually engaging,
-              high-performance websites with a focus on
-              <b>user-friendly</b> and <b>responsive layouts</b>.
-            </li>
-            <li>
-              Proficient in <b>HTML</b>, <b>CSS</b>, and <b>JavaScript</b>;
-              skilled in front-end development and creating interactive user
-              interfaces.
-            </li>
-            <li>
-              <b>Troubleshot and resolved</b> technical issues to ensure
-              optimal website performance and enhance user experience.
-            </li>
-          </ul>
+          <p>
+            Skilled in front-end development, I design and develop visually engaging, high-performance websites with
+            user-friendly, responsive layouts. Proficient in HTML, CSS, and JavaScript, I create interactive user
+            interfaces and effectively troubleshoot technical issues to ensure optimal website performance and enhance
+            the overall user experience.
+            </ul>
         </div>
 
         <!-- Projects Section -->
@@ -259,78 +249,32 @@
         </div>
         <div class="contentstyle">
           <div class="header">
-            Travel AI App Development | Gemini LLM, Next.js, Neon PostgreSQL, APIs
+            AI Travel App | Gemini LLM, Next.js, Neon PostgreSQL, APIs
           </div>
-          <ul>
-            <li>
-              Interface: Developed an interactive, mobile-friendly web interface with Next.js for seamless user
-              experience across
-              devices.
-            </li>
-
-            <li> AI: Built a travel assistant app using Gemini LLM to generate personalized travel plans based on user
-              preferences and
-              budgets.
-            </li>
-
-            <li> Backend: Integrated Neon PostgreSQL for efficient data management and a robust backend to handle
-              real-time queries
-              and user inputs
-            </li>
-
-            <li>Features: Incorporated APIs for location-based services and traffic updates to enhance trip planning
-              accuracy and
-              convenience.
-            </li>
-          </ul>
+          <p>Developed an interactive, mobile-friendly web interface with Next.js to ensure a seamless user experience
+            across devices and created a travel assistant app using Gemini LLM to generate personalized travel plans
+            based on user preferences and budgets. Integrated Neon PostgreSQL for efficient data management,
+            establishing a robust backend capable of handling real-time queries and user inputs. Additionally,
+            incorporated APIs for location-based services and traffic updates to enhance trip planning accuracy and
+            convenience.
+          </p>
         </div>
         <div class="contentstyle">
           <div class="header">
             ML House Price Prediction | Python, Scikit-Learn, Gradient Boosting, Pandas, Matplotlib
           </div>
-          <ul>
-            <li>
-              Model: Built a predictive model using Python and Scikit-Learn Gradient Boosting Regressor, achieving a
-              Mean Absolute Error of $33,429.72 for house price forecasting.
-            </li>
-
-            <li>
-              Processing: Employed Pandas for data cleaning and feature engineering, including price change
-              calculations and normalization with StandardScaler, enhancing model performance by capturing market
-              trends.
-            </li>
-            <li>
-              Algorithm: Developed a conservative growth algorithm incorporating dynamic decay factors and sanity
-              checks to ensure reliable and realistic long-term price predictions
-            </li>
-            <li> Backend: Integrated Neon PostgreSQL for efficient data management and a robust backend to handle
-              real-time queries
-              and user inputs
-            </li>
-            <li>
-              Visualization: Utilized Matplotlib to create comprehensive graphs showcasing historical data and future
-              price projections, facilitating better interpretation and presentation of results.
-            </li>
-          </ul>
+          <p>Built an interactive, mobile-friendly web interface with Next.js to ensure a seamless user experience
+            across devices. Developed a travel assistant app using Gemini LLM to generate personalized travel plans
+            based on user preferences and budgets. Integrated Neon PostgreSQL for efficient data management and a robust
+            backend capable of handling real-time queries and user inputs. Incorporated APIs for location-based services
+            and traffic updates to enhance trip planning accuracy and convenience.</p>
         </div>
         <div class="contentstyle">
           <div class="header">Portfolio Website | HTML/CSS, JavaScript</div>
-          <ul>
-            <li>
-              Frontend Development: Designed and built a personal portfolio website using HTML, CSS, and JavaScript to
-              effectively showcase projects and skills.
-            </li>
-            <li>
-              Responsive Design: Implemented responsive web design principles to ensure consistent performance and
-              appearance
-              across various devices and browsers.
-            </li>
-            <li>
-              Interactive Features: Added interactive elements such as animations and hover effects to enhance user
-              engagement
-              and website appeal.
-            </li>
-          </ul>
+          <p>Designed and built a personal portfolio website using HTML, CSS, and JavaScript to effectively showcase
+            projects and skills. Implemented responsive design principles to ensure consistent performance and
+            appearance across various devices and browsers. Incorporated interactive elements such as animations and
+            hover effects to enhance user engagement and website appeal.</p>
         </div>
 
         <!-- Skills Section 
