--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -263,18 +263,25 @@
           <div class="header">
             ML House Price Prediction | Python, Scikit-Learn, Gradient Boosting, Pandas, Matplotlib
           </div>
-          <p>Built an interactive, mobile-friendly web interface with Next.js to ensure a seamless user experience
-            across devices. Developed a travel assistant app using Gemini LLM to generate personalized travel plans
-            based on user preferences and budgets. Integrated Neon PostgreSQL for efficient data management and a robust
-            backend capable of handling real-time queries and user inputs. Incorporated APIs for location-based services
-            and traffic updates to enhance trip planning accuracy and convenience.</p>
+          <p>
+            Built a predictive house price forecasting model using Python and Scikit-Learn's Gradient Boosting
+            Regressor, achieving a Mean Absolute Error of $33,429.72. Employed Pandas for data cleaning and feature
+            engineering, including price change calculations and normalization with StandardScaler, enhancing model
+            performance by capturing market trends. Developed a conservative growth algorithm incorporating dynamic
+            decay factors and sanity checks to ensure reliable and realistic long-term price predictions. Integrated
+            Neon PostgreSQL for efficient data management and a robust backend to handle real-time queries and user
+            inputs. Utilized Matplotlib to create comprehensive graphs showcasing historical data and future price
+            projections, facilitating better interpretation and presentation of results.
+          </p>
         </div>
         <div class="contentstyle">
           <div class="header">Portfolio Website | HTML/CSS, JavaScript</div>
-          <p>Designed and built a personal portfolio website using HTML, CSS, and JavaScript to effectively showcase
+          <p>
+            Designed and built a personal portfolio website using HTML, CSS, and JavaScript to effectively showcase
             projects and skills. Implemented responsive design principles to ensure consistent performance and
             appearance across various devices and browsers. Incorporated interactive elements such as animations and
-            hover effects to enhance user engagement and website appeal.</p>
+            hover effects to enhance user engagement and website appeal.
+          </p>
         </div>
 
         <!-- Skills Section 
