shortened summary for ML house project

--- a/Portfolio Website/index.html
+++ b/Portfolio Website/index.html
@@ -264,14 +264,13 @@
             ML House Price Prediction | Python, Scikit-Learn, Gradient Boosting, Pandas, Matplotlib
           </div>
           <p>
-            Built a predictive house price forecasting model using Python and Scikit-Learn's Gradient Boosting
-            Regressor, achieving a Mean Absolute Error of $33,429.72. Employed Pandas for data cleaning and feature
-            engineering, including price change calculations and normalization with StandardScaler, enhancing model
-            performance by capturing market trends. Developed a conservative growth algorithm incorporating dynamic
-            decay factors and sanity checks to ensure reliable and realistic long-term price predictions. Integrated
-            Neon PostgreSQL for efficient data management and a robust backend to handle real-time queries and user
-            inputs. Utilized Matplotlib to create comprehensive graphs showcasing historical data and future price
-            projections, facilitating better interpretation and presentation of results.
+            Developed a house price forecasting model using Python and Scikit-Learn's Gradient Boosting Regressor,
+            achieving a Mean Absolute Error of $33,429.72. Utilized Pandas for data cleaning and feature engineering,
+            including price change calculations and StandardScaler normalization to capture market trends. Created a
+            conservative growth algorithm with dynamic decay factors and sanity checks for reliable long-term
+            predictions. Integrated Neon PostgreSQL for efficient data management and a robust backend handling
+            real-time queries. Employed Matplotlib to visualize historical data and future price projections, enhancing
+            result interpretation and presentation.
           </p>
         </div>
         <div class="contentstyle">
